Finally fixed issue with super thick visible border of menu lists

--- a/ParcelWs-V2/apps/trmrk-react-testapp/src/styles/main.scss
+++ b/ParcelWs-V2/apps/trmrk-react-testapp/src/styles/main.scss
@@ -5,6 +5,10 @@ body, #app-root {
   overflow: hidden;
 }
 
+.trmrk-icons-menu-list {
+  padding: 0.1em 0.5em;
+}
+
 .MuiCheckbox-root.trmrk-checkbox {
   border-radius: 3px;
 }
